force-app/main/default/objects/HardwareFulfilment__c/HardwareFulfilment__c.object-meta.xml
<CustomObject>
    <label>Hardware Fulfilment</label>
    <nameField>
        <label>Fulfilment No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardware Fulfilments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>