force-app/main/default/objects/HardwareFulfilment__c/fields/ArticleName__c.field-meta.xml
<CustomField>
    <fullName>ArticleName__c</fullName>
    <label>Article Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>