force-app/main/default/objects/HardwareFulfilment__c/fields/DateShipping__c.field-meta.xml
<CustomField>
    <fullName>DateShipping__c</fullName>
    <label>Date Shipping</label>
    <length>50</length>
    <type>Text</type>
</CustomField>