force-app/main/default/objects/HardwareFulfilment__c/fields/DeviceName__c.field-meta.xml
<CustomField>
    <fullName>DeviceName__c</fullName>
    <label>Device Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>