force-app/main/default/objects/HardwareFulfilment__c/fields/From_Invoice_Hardware_Item__c.field-meta.xml
<CustomField>
    <fullName>From_Invoice_Hardware_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/CDS-3073</description>
    <inlineHelpText>Has this HWF been created from an OB Invoice Hardware Item?</inlineHelpText>
    <label>From Invoice Hardware Item</label>
    <referenceTo>Invoice_Hardware_Item__c</referenceTo>
    <relationshipLabel>Created Hardware Fulfilment</relationshipLabel>
    <relationshipName>Hardware_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>