force-app/main/default/objects/HardwareFulfilment__c/fields/GLS_flow_ready__c.field-meta.xml
<CustomField>
    <fullName>GLS_flow_ready__c</fullName>
    <formula>TODAY() =   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GLS flow ready</label>
    <type>Checkbox</type>
</CustomField>