force-app/main/default/objects/HardwareFulfilment__c/fields/GLS_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>GLS_Tracking_Link__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1398</description>
    <label>GLS Tracking Link</label>
    <type>Url</type>
</CustomField>