force-app/main/default/objects/HardwareFulfilment__c/fields/Guarantee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_End_Date__c</fullName>
    <formula>IF ( ISBLANK(Is_Exchange_Item__c), DATEVALUE(CreatedDate) + 365, Is_Exchange_Item__r.Guarantee_End_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guarantee End Date</label>
    <type>Date</type>
</CustomField>