force-app/main/default/objects/HardwareFulfilment__c/fields/Hardware_F_Po1__c.field-meta.xml
<CustomField>
    <fullName>Hardware_F_Po1__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-131</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware F Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>