force-app/main/default/objects/HardwareFulfilment__c/fields/InternalIDFF__c.field-meta.xml
<CustomField>
    <fullName>InternalIDFF__c</fullName>
    <description>Internal ID Item Fulfilment</description>
    <label>Internal ID FF</label>
    <length>30</length>
    <type>Text</type>
</CustomField>