force-app/main/default/objects/HardwareFulfilment__c/fields/InternalIDHW__c.field-meta.xml
<CustomField>
    <fullName>InternalIDHW__c</fullName>
    <externalId>true</externalId>
    <label>Internal ID HW</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>