force-app/main/default/objects/HardwareFulfilment__c/fields/InternalIDSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>InternalIDSalesOrder__c</fullName>
    <description>Internal ID Netsuite Sales Order</description>
    <label>Internal ID Sales Order</label>
    <length>30</length>
    <type>Text</type>
</CustomField>