force-app/main/default/objects/HardwareFulfilment__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <label>IP Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>