force-app/main/default/objects/HardwareFulfilment__c/fields/Is_Exchange_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Exchange_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDS-2005</description>
    <inlineHelpText>Is this an Exchange Item? If yes, what is the related Exchange Process? (filled automatically)</inlineHelpText>
    <label>Is Exchange Item</label>
    <referenceTo>HW_Exchange__c</referenceTo>
    <relationshipLabel>Hardware Fulfilments</relationshipLabel>
    <relationshipName>Hardware_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>