force-app/main/default/objects/HardwareFulfilment__c/fields/NetsuiteURL__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteURL__c</fullName>
    <label>Netsuite URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>