force-app/main/default/objects/HardwareFulfilment__c/fields/Shipped_with__c.field-meta.xml
<CustomField>
    <fullName>Shipped_with__c</fullName>
    <label>Shipped with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>