force-app/main/default/objects/HardwareFulfilment__c/fields/Shipping_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Tracking_Number__c</fullName>
    <label>Shipping Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>