force-app/main/default/objects/HardwareFulfilment__c/fields/StatusShipping__c.field-meta.xml
<CustomField>
    <fullName>StatusShipping__c</fullName>
    <label>Status Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>