force-app/main/default/objects/HardwareFulfilment__c/fields/Tracking_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Support
https://jira.orderbird.com/browse/CDS-1293</description>
    <inlineHelpText>Has the customer received an email with GLS tracking information based on this HWF?</inlineHelpText>
    <label>Tracking Mail Sent</label>
    <type>Checkbox</type>
</CustomField>