force-app/main/default/objects/HardwareFulfilment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ArticleName__c</columns>
    <columns>DeviceName__c</columns>
    <columns>NetsuiteURL__c</columns>
    <columns>StatusShipping__c</columns>
    <columns>DateShipping__c</columns>
    <columns>GLS_Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>