force-app/main/default/objects/HardwareFulfilment__c/listViews/Created_Yesterday.listView-meta.xml
<ListView>
    <fullName>Created_Yesterday</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ArticleName__c</columns>
    <columns>DeviceName__c</columns>
    <columns>NetsuiteURL__c</columns>
    <columns>StatusShipping__c</columns>
    <columns>DateShipping__c</columns>
    <columns>GLS_flow_ready__c</columns>
    <columns>Tracking_Mail_Sent__c</columns>
    <columns>GLS_Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>GLS_Tracking_Link__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>GLS_Tracking_Link__c</field>
        <operation>notEqual</operation>
        <value>https://gls-group.eu/DE/de/paketverfolgung?match=</value>
    </filters>
    <label>Created Yesterday</label>
</ListView>