force-app/main/default/objects/HardwareFulfilment__c/listViews/Manual_Date.listView-meta.xml
<ListView>
    <fullName>Manual_Date</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ArticleName__c</columns>
    <columns>DeviceName__c</columns>
    <columns>NetsuiteURL__c</columns>
    <columns>StatusShipping__c</columns>
    <columns>DateShipping__c</columns>
    <columns>GLS_flow_ready__c</columns>
    <columns>Tracking_Mail_Sent__c</columns>
    <columns>SerialNumber__c</columns>
    <columns>GLS_Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>Manual Date</label>
</ListView>